src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ABM_Influenced_Contact__c</fullName>
        <description>Field to indicate contact has been involved in ABM sequence in Outreach.</description>
        <label>ABM Influenced Contact</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABM_Influenced_Date_Contact__c</fullName>
        <label>ABM Influenced Date (Contact)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Account ID from Sugar</description>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actively_Being_Sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact is actively being sequenced in Outreach</description>
        <label>Actively Being Sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <description>Unique ID to link SFDC contact to contact in Allbound</description>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a7y3s0000004HyrAAE discussed with Rod,Logan,Julia</description>
        <inlineHelpText>Primary alliances contact dedicated to Neo4j</inlineHelpText>
        <label>Alliance Partner Primary (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous_Web_Source_Detail__c</fullName>
        <label>Anonymous Web Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anonymous_Web_Source__c</fullName>
        <label>Anonymous Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_ID__c</fullName>
        <description>Sugar User ID, Used to assign owners in migration.</description>
        <externalId>true</externalId>
        <label>Assigned User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attached_To_Opportunity__c</fullName>
        <description>Populates to 1 if an opportunity is attached to an opportunity. It&apos;s updated by the &quot;Update Contact Attache to Opportunity&quot; flow.</description>
        <label>Attached To Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aura_UserID__c</fullName>
        <description>Added in https://sfdxspt-neoj4.atlassian.net/browse/SFDCSPT-354</description>
        <inlineHelpText>This will be used to identity unique Aura users along with email address and will allow us to prevent merging of Aura customer records with standard Neo4j leads and contacts.  This field does not have uniqueness enforced, and is mapped in standard Lead Conversion to the resulting Contact. This field helps those in Analytics operate their ETL processes around the tracking of MRR at the Campaign Member level.</inlineHelpText>
        <label>Aura UserID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <description>Score based of off the behaviors the lead.</description>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Neo4j_L1__c</fullName>
        <description>Indicates if the contact has completed the certification.</description>
        <label>Certification Neo4j L1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <label>Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__CES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contact Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAR__c</fullName>
        <label>Mailing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mailing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MAV__c</fullName>
        <label>Mailing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MRDI__c</fullName>
        <label>Mailing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__MTZ__c</fullName>
        <label>Mailing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAR__c</fullName>
        <label>Other Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OAV__c</fullName>
        <label>Other Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ORDI__c</fullName>
        <label>Other Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__OTZ__c</fullName>
        <label>Other Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <description>Company&apos;s main phone line</description>
        <inlineHelpText>Company&apos;s main phone line</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Revenue__c</fullName>
        <formula>Text(Account.Account_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Count_1__c</fullName>
        <description>power of one on contact object</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Engagement_Link__c</fullName>
        <label>Contact Engagement Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Linkedin_Profile__c</fullName>
        <description>URL for Linkedin profile</description>
        <label>Contact Linkedin Profile</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Status_Change_Date__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnnadia</businessOwnerUser>
        <description>Admin time stamp field used for auditing purposes and in certain integrations, including RingLead to help accurately determine the winning record that will survive the merge. JIRA: SFDCSPT-163</description>
        <inlineHelpText>Admin time stamp field used for auditing purposes and in certain integrations, including RingLead to help accurately determine the winning record that will survive the merge.</inlineHelpText>
        <label>Contact Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Status_Detail__c</fullName>
        <description>This field was created to provide a way to enter the reason codes specific to the &quot;Disqualified&quot; and &quot;Recycle&quot; values in &quot;Lead Status&quot; field.

JIRA: 
SFDCSPT-91; 7.27.2020
SFDCSPT-100; 8.6.2020</description>
        <inlineHelpText>&quot;Disqualified&quot; and &quot;Recycle&quot; reason codes mapped to the &quot;Contact Status&quot; field.</inlineHelpText>
        <label>Contact Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Country (not serviced)</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Job Applicant/Solicitor</fullName>
                </value>
                <value>
                    <fullName>Left Company</fullName>
                </value>
                <value>
                    <fullName>No Approved Project</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No Reason Provided - Marketo Default Disqualified</fullName>
                </value>
                <value>
                    <fullName>No Reason Provided - Marketo Default Recycle</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>PR/Press</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Status for contact, synced over from lead status on conversion</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Raw</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>SAO</fullName>
                </value>
                <value>
                    <fullName>Late Stage Opportunity</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_PQL_Type__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates which type of PQL that a lead or contact is. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates which type of Product Qualified Lead (PQL) that a contact is. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Current PQL Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Spender</fullName>
                </value>
                <value>
                    <fullName>Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Sequence_Status__c</fullName>
        <description>Value of sequence state</description>
        <label>Current Sequence Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Number__c</fullName>
        <description>Number of sequence step</description>
        <label>Current Sequence Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Type__c</fullName>
        <description>Current sequence step type</description>
        <label>Current Sequence Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>auto_email</fullName>
                    <label>Auto-Email</label>
                </value>
                <value>
                    <fullName>manual_email</fullName>
                    <label>Manual Email</label>
                </value>
                <value>
                    <fullName>linkedin_interact_with_post</fullName>
                    <label>LinkedIn Interact with Post</label>
                </value>
                <value>
                    <fullName>linkedin_view_profile</fullName>
                    <label>LinkedIn View Profile</label>
                </value>
                <value>
                    <fullName>linkedin_send_connection_request</fullName>
                    <label>LinkedIn Send Connection Request</label>
                </value>
                <value>
                    <fullName>linkedin_send_message</fullName>
                    <label>LinkedIn Send Message</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Sequence_Task_Due_Date__c</fullName>
        <description>Due date of manual task</description>
        <label>Current Sequence Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBContactRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>ContactToDnB</label>
        <referenceTo>DNBoptimizer__DnBContactRecord__c</referenceTo>
        <relationshipLabel>ContactToDnB</relationshipLabel>
        <relationshipName>ContactToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_B_Business_Name__c</fullName>
        <label>D&amp;B Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Contact_ID__c</fullName>
        <label>D&amp;B Contact ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Contact_Phone__c</fullName>
        <label>D&amp;B Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>D_B_D_U_N_S_Number__c</fullName>
        <label>D&amp;B D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Email_Deliverability_Score__c</fullName>
        <label>D&amp;B Email Deliverability Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Email_Deliverability__c</fullName>
        <label>D&amp;B Email Deliverability</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Email__c</fullName>
        <label>D&amp;B Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_First_Name__c</fullName>
        <label>D&amp;B First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Job_Title__c</fullName>
        <label>D&amp;B Job Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Last_Name__c</fullName>
        <label>D&amp;B Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Middle_Name__c</fullName>
        <label>D&amp;B Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Phone_Accuracy_Score__c</fullName>
        <label>D&amp;B Phone Accuracy Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Phone_Accuracy__c</fullName>
        <label>D&amp;B Phone Accuracy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Prefix__c</fullName>
        <label>D&amp;B Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_City__c</fullName>
        <label>D&amp;B Primary Address City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Country_Code_ISO_2__c</fullName>
        <label>D&amp;B Primary Address Country Code (ISO 2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Postal_Code__c</fullName>
        <label>D&amp;B Primary Address Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_State_Province_Abbre__c</fullName>
        <label>D&amp;B Primary Address State Province Abbre</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_State_Province__c</fullName>
        <label>D&amp;B Primary Address State Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_SIC4_Code_1_Description__c</fullName>
        <label>D&amp;B SIC4 Code 1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_SIC4_Code_1__c</fullName>
        <label>D&amp;B SIC4 Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Suffix__c</fullName>
        <label>D&amp;B Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Database_Name_Contains_Production__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an AuraDB user has at least one database that contains the naming convention &apos;Production&apos; in it. If the value is 0, it does not necessarily mean that the user is not in production, but that they do not have a database that contains the naming convention &apos;Prodution&apos;.This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an AuraDB user has at least one database that contains the naming convention &apos;Production&apos; in it. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Database Name Contains ‘Production’</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Annual_Revenue_Range__c</fullName>
        <label>Demographic Score: Annual Revenue Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Employee_Range__c</fullName>
        <label>Demographic Score: Employee Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Industry__c</fullName>
        <label>Demographic Score: Industry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Job_Function__c</fullName>
        <label>Demographic Score: Job Function</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Stored_Value__c</fullName>
        <formula>Demographic_Score_Annual_Revenue_Range__c + Demographic_Score_Employee_Range__c  +  Demographic_Score_Industry__c + Demographic_Score_Job_Function__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demographic Score Stored Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <description>Demographic Score populated by Marketo</description>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dfox_Title__c</fullName>
        <description>Datfox Title</description>
        <label>DF Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Application Development or Data Science</description>
        <inlineHelpText>Application Development or Data Science</inlineHelpText>
        <label>Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualified_Date__c</fullName>
        <description>Date contact was disqualified</description>
        <label>Disqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason_History__c</fullName>
        <description>History of disqualified values</description>
        <label>Disqualified Reason History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Double_Opt_In_Date__c</fullName>
        <description>Date contact selected to double opt in</description>
        <label>Double Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Double_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact selected to double opt in</description>
        <label>Double Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Secondary__c</fullName>
        <description>Secondary email for contact</description>
        <label>Email (Secondary)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <description>Picklist to indicate number of employees in company</description>
        <label>Employee Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 9</fullName>
                </value>
                <value>
                    <fullName>10 to 19</fullName>
                </value>
                <value>
                    <fullName>20 to 49</fullName>
                </value>
                <value>
                    <fullName>50 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 249</fullName>
                </value>
                <value>
                    <fullName>250 to 499</fullName>
                </value>
                <value>
                    <fullName>500 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 to 2,499</fullName>
                </value>
                <value>
                    <fullName>2,500 to 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 to 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
                <value>
                    <fullName>1,000+</fullName>
                    <isActive>false</isActive>
                    <label>1,000+</label>
                </value>
                <value>
                    <fullName>10 to 99</fullName>
                    <isActive>false</isActive>
                    <label>10 to 99</label>
                </value>
                <value>
                    <fullName>100 to 999</fullName>
                    <isActive>false</isActive>
                    <label>100 to 999</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eventbrite_ID__c</fullName>
        <description>ID for Eventbrite to Marketo Connection</description>
        <label>Eventbrite ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_LSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired SLA - LSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a MQL has past it&apos;s SLA</description>
        <label>Expired SLA - MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_SAL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a SAL has past it&apos;s SLA</description>
        <label>Expired SLA - SAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_SAO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a SAO has past it&apos;s SLA</description>
        <label>Expired SLA - SAO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_SQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a SQL has past it&apos;s SLA</description>
        <label>Expired SLA - SQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Tier_User_Status__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Aura user has had at least one live Free AuraDB database running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an Aura user has had least one live Free AuraDB database running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Free Tier User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Territory_Contact__c</fullName>
        <description>Indicates what global region the Contact falls into based on the shipping country. Correction made to the original list. JIRA: SFDCSPT-248</description>
        <formula>IF(ISBLANK(MailingCountry), &quot; &quot;,


IF(CONTAINS(&quot;Algeria : Armenia : Austria : Azerbaijan : Bahrain : Belarus : Belgium : Bosnia and Herzegovina : Bulgaria : Cameroon : Croatia : Cyprus : Czech Republic : Denmark : Egypt : Estonia : Ethiopia : Finland : France : Georgia : Germany : Ghana : Gibraltar : Greece : Hungary : Iceland : Iran : Iran : Ireland : Israel : Italy : Ivory Coast : Jordan : Kazakhstan : Kenya : Kuwait : Lebanon : Lithuania : Luxembourg : Malta : Monaco : Morocco : Netherlands : Nigeria : Norway : Oman : Poland : Portugal : Qatar : Romania : Russian Federation : Saudi Arabia : Serbia : Slovakia : Slovenia : South Africa : Spain : Sweden : Switzerland : Tunisia : Turkey : Uganda : Ukraine : United Arab Emirates : United Kingdom : Uzbekistan : Virgin Islands (British) : Zimbabwe : Sudan : Senegal&quot;, MailingCountry), &quot;EMEA&quot;,


IF(CONTAINS(&quot;Bermuda : Canada : United States&quot;, MailingCountry), &quot;NA&quot;,


IF(CONTAINS(&quot;Antigua and Barbuda : Argentina : Barbados : Brazil : Cayman Islands : Chile : Colombia : Costa Rica : Guatemala : Paraguay : Panama : Guyana : Peru : Ecuador : El Salvador : Mexico : Nicaragua : Uruguay : Venezuela : Honduras : Cuba : Jamaica : Bolivia : Anguilla : Bahamas : Belize : Dominica : Dominican Republic : Falkland Islands : Trinidad and Tobago : French Guiana&quot;, MailingCountry),&quot;LATAM&quot;,


IF(CONTAINS(&quot;Australia : Bangladesh : Cambodia : Bhutan : China : Guam : Hong Kong : India : Indonesia : Japan : Laos : Malaysia : Nepal : New Zealand : Pakistan : Philippines : Singapore : South Korea : Sri Lanka : Taiwan : Thailand : Vietnam : Myanmar : Brunei Darussalam : Macau : Mongolia&quot;, MailingCountry),&quot;APAC&quot;,


&quot; &quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates what global region the Contact falls into based on the shipping country.</inlineHelpText>
        <label>Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Core_Country__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A contact who works in a core country</description>
        <inlineHelpText>A contact who works in a core country</inlineHelpText>
        <label>In Core Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Original_Date__c</fullName>
        <description>Original date lead was marked as inquiry</description>
        <label>Inquiry Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intent_Trigger_Type__c</fullName>
        <label>Intent Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged with Competitor</fullName>
                </value>
                <value>
                    <fullName>New Follower / Started Following</fullName>
                </value>
                <value>
                    <fullName>Engaged with Industry News</fullName>
                </value>
                <value>
                    <fullName>Attended Industry Conference</fullName>
                </value>
                <value>
                    <fullName>Hiring for Specific Roles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>